--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     },
     "scripts": {
         "test": "mocha",
-        "lint": "eslint src",
-        "fix": "eslint --fix src"
+        "lint": "eslint src test",
+        "fix": "eslint --fix src test"
     }
 }
