--- a/package.json
+++ b/package.json
@@ -17,11 +17,16 @@
         "eslint": "^6.3",
         "mocha": "^6.2",
         "chai": "^4.2",
-        "rewire": "^4"
+        "rewire": "^4",
+        "uglify-js": "^3.6",
+        "uglify-es": "^3.3.9",
+        "@babel/core": "^7.5",
+        "@babel/preset-env": "^7.6"
     },
     "scripts": {
         "test": "mocha",
-        "lint": "eslint src test",
-        "fix": "eslint --fix src test"
+        "lint": "eslint src test bin",
+        "fix": "eslint --fix src test bin",
+        "build": "node bin/build"
     }
 }
