--- a/package.json
+++ b/package.json
@@ -11,17 +11,20 @@
     "author": "Björn Büttner",
     "contributors": [],
     "dependencies": {
-        "fabric": "^3.4"
+        "ajv": "^5.5.2",
+        "bufferutil": "^4.0.1",
+        "fabric": "^3.6.3",
+        "utf-8-validate": "^5.0.2"
     },
     "devDependencies": {
-        "eslint": "^6.3",
-        "mocha": "^6.2",
+        "@babel/core": "^7.9.6",
+        "@babel/preset-env": "^7.9.6",
         "chai": "^4.2",
+        "eslint": "^6.8.0",
+        "mocha": "^6.2.3",
         "rewire": "^4",
-        "uglify-js": "^3.6",
         "uglify-es": "^3.3.9",
-        "@babel/core": "^7.5",
-        "@babel/preset-env": "^7.6"
+        "uglify-js": "^3.9.2"
     },
     "scripts": {
         "test": "mocha",
