--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "devDependencies": {
         "@babel/core": "^7.9.6",
         "@babel/preset-env": "^7.9.6",
+        "canvas": "^2.6.1",
         "chai": "^4.2",
         "eslint": "^6.8.0",
         "mocha": "^6.2.3",
